# AgentBasics

./: .gitignore
backend/: main.py  pyproject.toml
backend/src/agents/: pvideo_agent.py  video_agent.py
backend/src/api/: routes.py
backend/src/tools/: replicate_tool.py
